colang-cli/tests/samples/good/std/abs.co
fun main() {
  var x = -1;
  assert(abs(x) == 1);
}
