colang-cli/tests/samples/compile_error/null_ambiguous_type.co
fun main() {
  var p = null;
}
